creo carpeta sass, paso css a sass y aplico ultimas modificaciones

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -3,12 +3,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="¿Tu sueño es aprender a volar? Contáctanos para poder brindarte mas información sobre nuestros cursos, modalidades, nuestra flota y entrenamiento perzonalizado.">
+        <meta name="keywords" content="Escuela de vuelo, contacto, formulario de contacto, datos de contacto, aviación general, piloto privado, requisitos para aprender a volar.">
         <link rel="shortcut icon" href="../media/favicon.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Lato&family=Mr+Dafoe&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/style.css">
-        <title>Contacto</title>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@600&family=Mr+Dafoe&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="../css/app.css">
+        <title>Alas Azules Escuela de Vuelo - Contacto</title>
     </head>
     <body>
         <header class="header">
@@ -31,12 +33,12 @@
         </header>
         <main>
             <div id="contactanos">
-                <h1>CONTACTANOS</h1>
+                <h1>CONTÁCTANOS</h1>
             </div>
             <div class="cajacontacto">
                 <div class="datos">
                     <h5>Gracias por visitar Alas azules escuela de Vuelo.
-                    Contactanos o completa el formulario para que podamos comunicarnos contigo.</h5>
+                    Contáctanos o completa el formulario para que podamos comunicarnos contigo.</h5>
                     <br>
                     <br>
                     <div id="correo">
