--- a/paginas/cursos.html
+++ b/paginas/cursos.html
@@ -3,12 +3,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="¿Tu sueño es aprender a volar? En Alas Azules tenemos un catálogo completo de cursos, comenzando con el de Piloto Privado, para que puedas formarte como un piloto profesional.">
+        <meta name="keywords" content="Escuela de vuelo, aprender a volar, cursos, piloto privado, piloto comercial, habilitación por instrumentos, piloto instructor, entrenamiento de pilotos, habilitación multimotor, instrucción de vuelo.">
         <link rel="shortcut icon" href="../media/favicon.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Lato&family=Mr+Dafoe&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/style.css">
-        <title>Cursos</title>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@600&family=Mr+Dafoe&display=swap" rel="stylesheet">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/app.css">
+        <title>Alas Azules Escuela de Vuelo - Cursos</title>
     </head>
     <body>
         <header class="header">
@@ -24,8 +27,8 @@
                     <li><a href="./nosotros.html">Nosotros</a></li>
                     <li><a href="./cursos.html">Cursos</a></li>
                     <li><a href="./flota.html">Flota</a></li>
-                    <li><a href="./galeria.html">GALERIA</a></li>
-                    <li><a href="./contacto.html">CONTACTO</a></li>
+                    <li><a href="./galeria.html">Galeria</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>
@@ -39,32 +42,32 @@
                     <p>Este curso es el comienzo de la carrera de todos los Pilotos, tanto Para quienes van a volar por placer, como para los que deseen continuar entrenando hasta volar un jet comercial.
                     Nuestra propuesta consiste en una fase teórica que incluye todas las asignaturas previstas en los exámenes de la DINACIA y además en una fase de práctica específica intensiva, que es la etapa especifica de aprender a volar.</p>
                     </div>
-                <div class="instrumentos">
-                    <h3>Habilitacion por Instrumentos</h3>
+                <div class="instrumentos" data-aos="zoom-in-left" data-aos-duration="4500" data-aos-easing="ease-in-sine">
+                    <h3>Habilitación por Instrumentos</h3>
                     <p>Este curse desarrolla la capacidad de pilotear una aeronave en cualquier condición meteorológica, en vuelos nocturnos y en navegaciones sin referencias visuales con el terreno.
                     Dominar las técnicas para aproximar por instrumentos a un aeropuerto es una habilidad que quienes deseen ampliar sus capacidades como aviadores.
                     La habilitación para volar por instrumentos es un pilar imprescindible para quienes aspiren a ser algo mas que “piloto de días soleados”.</p>
                 </div>
             </div>
             <div class="cajacursos2">
-                <div class="comercial">
+                <div class="comercial" data-aos="zoom-in-right" data-aos-duration="4500" data-aos-easing="ease-in-sine">
                     <h3>Piloto Comercial</h3>
                     <p>La licencia de Piloto Aviador Comercial de aeronave de ala fija confiere a su titular actuar como piloto al mando de aeronaves con peso máximo de despegue hasta de 5,700 kilogramos o copiloto de aeronaves cualesquiera que sea su peso.
                     El curso de Piloto Comercial es el paso siguiente para aquellos pilotos privados que deseen hacer de la aviación su futuro laboral. Ésta etapa abarca los conocimientos obtenidos durante el Curso de Piloto Privado, al que se le agregan más conocimientos en lo que refiere a meteorología, aeronáutica, reglamentaciones y mucho más en materia relacionada con la aviación.</p>
                 </div>
-                <div class="instructor">
+                <div class="instructor" data-aos="zoom-in-left" data-aos-duration="4500" data-aos-easing="ease-in-sine">
                     <h3>Piloto Instructor</h3>
                     <p>El certificado de Instructor de vuelo es probablemente el certificado más difícil de lograr. Aumentara tu capacidad para planificar, presentar, recopilar comentarios, monitorear sistemas y asegurarte que tus estudiantes están, progresando y cumpliendo con los estándares como pilotos, ampliará tus capacidades de aviador.
                     En la aeronave, el aplicante para instructor de vuelo, debe aprender a hacer frente a un  conjunto de desafíos. El primero de ellos es  adquirir  la capacidad de volar el avión desde el asiento del instructor.  Por eso en nuestra Escuela de vuelo contamos con altos estándares de instrucción para poder formarte en éste curso.</p>
                 </div>
             </div>
             <div class="cajacursos3">
-                <div class="multimotor"> 
-                    <h3>Habilitacion Multimotor</h3>
+                <div class="multimotor" data-aos="zoom-in-right" data-aos-duration= "4500" data-aos-easing="ease-in-sine"> 
+                    <h3>Habilitación Multimotor</h3>
                     <p>La habilitación en aviones multimotores te permitirá obtener los conocimientos de forma teóricos y prácticos sobre el comportamiento y la forma de operación en estos tipos de aeronaves, dándole a tu formación un enorme valor agregado.
                     Una vez cuentes con la Habilitación para volar aeronaves de mas de un motor, podrás pasar a aviones más grandes y de mayor porte pudiendo postularte a los llamados de Pilotos para distintas Aerolíneas, ya sean de la región como del mundo.</p>
                 </div>
-                <div class="entrenamiento"> 
+                <div class="entrenamiento" data-aos="zoom-in-left" data-aos-duration="4500" data-aos-easing="ease-in-sine"> 
                     <h3>Plan de Entrenamiento</h3>
                     <p>Una vez obtenida la licencia de Piloto Privado, ya sea por placer, diversión o para obtener experiencia para seguir avanzando hacia un futuro profesional, en la Escuela de vuelo te daremos el material necesario para que puedas disfrutar de tus logros.
                     Por eso, para que puedas seguis con los requisitos necesarios en avanzar a la siguiente categoría, te organizaremos distintas rutas de navegación, vuelos nocturnos, vuelos con conocimientos básicos en navegación, y así, que puedas lograr tus objetivos en un tiempo adecuado.</p>
@@ -107,5 +110,9 @@
                 <p>Copyright c 2023 - Desarrollado por Martín Balbi</p>
             </div>
         </footer>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+          </script>
     </body>
 </html>
