--- a/paginas/flota.html
+++ b/paginas/flota.html
@@ -3,12 +3,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="¿Tu sueño es aprender a volar? La flota más completa con tecnología de última generación, para que nuestros alumnos puedan convertirse en Pilotos profesionales">
+        <meta name="keywords" content="Escuela de vuelo, flota, aviones, hangares, aviación general, cessna, pipper, simulador de vuelo, cursos, piloto privado.">
         <link rel="shortcut icon" href="../media/favicon.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Lato&family=Mr+Dafoe&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/style.css">
-        <title>Flota</title>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@600&family=Mr+Dafoe&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="../css/app.css">
+        <title>Alas Azules Escuela de Vuelo - Flota</title>
     </head>
     <body>
         <header class="header">
@@ -35,19 +37,19 @@
                 <img src="../media/cessna152.jpg" width="100%" alt="c152">
                 <p>Cessna 152
                 <br>
-                Avion monomotor. Capacidad: Piloto y 1 pasajero. <br>
+                Avión monomotor. Capacidad: Piloto y 1 pasajero. <br>
                 Rango: 770 km. Velocidad máxima: 190km/h. <br>
-                Equipado con Instrumentos de vuelo analogos y electrónicos teniendo el alumno piloto todo lo necesario para poder operar la aeronave</p>
+                Equipado con Instrumentos de vuelo analogos y electrónicos teniendo el alumno piloto todo lo necesario para poder operar la aeronave.</p>
                 <img src="../media/cessna172.jpg" width="100%" alt="c172">
                 <p>Cessna 172
                 <br>
-                Avion monomotor. Capacidad: 1 Piloto y 3 pasajeros. <br>
+                Avión monomotor. Capacidad: 1 Piloto y 3 pasajeros. <br>
                 Rango: 1180 km. Velocidad máxima: 230km/h. <br>
                 Cuenta con Instrumentos de vuelo de última generacion permitiendo al piloto poder operar incluso, bajo condiciones meteorológicas para vuelo instrumental.</p>
                 <img src="../media/pipperseminole.jpg" width="100%" alt="piperseminole">
                 <p>Pipper Seminole
                 <br>
-                Avion bimotor. Capacidad: 1 Piloto y 3 pasajeros. <br>
+                Avión bimotor. Capacidad: 1 Piloto y 3 pasajeros. <br>
                 Rango: 1296 km. Velocidad maxima: 300km/h. <br>
                 Cuenta con Instrumentos de vuelo de última generacion permitiendo al piloto operar en todo tipo de condiciones meteorológicas.</p>
                 <img src="../media/simuladorc172.jpg" width="100%" alt="simulador-de-vuelo">
