--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -3,12 +3,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Sobre Nosotros. Somos una Escuela de Vuelo que se interesa por nuestros alumnos en formarlos como Pilotos profesionales, brindando toda la información disponible sobre la aviación.">
+        <meta name="keywords" content="Escuela de Vuelo, nosotros, quienes somos, trayectoria, misión, visión, objetivos.">
         <link rel="shortcut icon" href="../media/favicon.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Lato&family=Mr+Dafoe&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/style.css">
-        <title>Nosotros</title>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@600&family=Mr+Dafoe&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="../css/app.css">
+        <title>Alas Azules Escuela de vuelo - Nosotros</title>
     </head>
     <body>
         <header class="header">
@@ -45,11 +47,11 @@
                 <br>
                 <div class="mision">
                     <div class="texto2">
-                        <h5>Mision</h5>
+                        <h5>Misión</h5>
                         <br>
                         <p> Generar el aprendizaje necesario, brindandole a nuestros alumnos el mayor conocimiento y seguridad en aviación, formando personas con capacitación aeronáutica integral, comprometidos con la seguridad operacional.</p>
                         <br>
-                        <h5>Vision</h5>
+                        <h5>Visión</h5>
                         <br>
                         <p> Ser una organización aeronáutica innovadora, en cumplimiento de los más altos estándares internacionales en seguridad, calidad y gestión empresarial.</p>
                     </div>
