--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="¿Tu sueño es aprender a volar? En Alas Azules Escuela de Vuelo tenemos el curso de Piloto Privado que es el primer paso en la carrera de un Piloto.">
+        <meta name="keywords" content="Escuela de vuelo Uruguay, vuelos, cursos, carrera de Piloto, Aviación General, Aviación Comercial, Aeropuerto de Carrasco, Escuela de Vuelo Latinoamérica.">
         <link rel="shortcut icon" href="./media/favicon.png" type="image/x-icon">  
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Lato&family=Mr+Dafoe&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@600&family=Mr+Dafoe&display=swap" rel="stylesheet"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/style.css">
-        <title>Alas Azules Escuela de Vuelo</title>
+        <link rel="stylesheet" href="./css/app.css">
+        <title>Alas Azules Escuela de Vuelo - Inicio</title>
     </head>
     <body>
         <header class="header">
@@ -30,6 +32,7 @@
                 </ul>
             </nav>
         </header>
+        <main>
             <section id="portada">
                 <div>
                     <img src="./media/fotoportadaescuela.jpg" alt="portada" style="width: 100%;">
@@ -54,7 +57,7 @@
                         <div class="col-12 col-xl-6">
                             <div class="noticia1">
                                 <h3>Nuevo simulador de vuelo Cessna 172 Skyhawk.</h3>
-                                <p>Recientemente adquirido por la Escuela de vuelo, nuestro nuevo simulador de vuelo le   brinda al estudiante la familiarizarce con los controles de la aeeronave antes de hacer un  vuelo real.
+                                <p>Recientemente adquirido por la Escuela de vuelo, nuestros nuevos simuladores de vuelo le brindan al estudiante la familiarizarce con los controles de la aeeronave antes de hacer un  vuelo real.
                                 Esta solución propuesta incluye controles duales que han sido construidos en una réplica exacta de la cabina del Cessna 172 Skyhawk. Los controles de vuelo, las cubiertas de los instrumentos y la posición
                                 de los asientos de los pilotos emulan estrechamente la aeronave real del cliente para garantizar la máxima retención y aprendizaje de
                                 los músculos. El modelo de vuelo de la aeronave ha sido programado
@@ -71,7 +74,7 @@
                             <div class="row">
                                 <div class="col-12 col-xl-12">
                                     <div class="noticia2">
-                                        <h3>Primer vuelo solo de nuestro alumno Martin 25/04/2023</h3>
+                                        <h3>Primer vuelo solo de nuestro alumno Martín 25/04/2023</h3>
                                         <div class="noticia-2">
                                             <div class="video">
                                                 <iframe width=auto height="200" src="https://www.youtube.com/embed/c6X0abKb-Io" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
