--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -3,12 +3,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="¿Tu sueño es aprender a volar? Galería de imágenes de nuestra Escuela de Vuelo y el mundo aeronáutico">
+        <meta name="keywords" content="Escuela de vuelo, imágenes, aviones, pilotos, flota, alumnos, avión despegando, cursos, hangares">
         <link rel="shortcut icon" href="../media/favicon.png" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Lato&family=Mr+Dafoe&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/style.css">
-        <title>Galeria</title>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@600&family=Mr+Dafoe&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="../css/app.css">
+        <title>Alas Azules Escuela de Vuelo - Galeria</title>
     </head>
     <body>
         <header class="header">
@@ -31,7 +33,7 @@
         </header>
         <main>
             <div id="galeria">
-                <h1>GALERIA</h1>
+                <h1>GALERÍA</h1>
             </div>
             <div class="cajafotos">
                 <img src="../media/img1.jpg" alt="">
